# playground

./: Cargo.toml  stupid.rs
src/: main.rs
src/algorithms/: insertion_sort.rs
src/code/: array_transpose.rs  calc_fib.rs  collatz.rs  collatz_max_iter.rs  death_clock.rs  draw_rect.rs  draw_rect_rand.rs  factorial.rs  guessing_game.rs  is_even_odd.rs  matrix_average.rs  mod.rs  most_frequent_letter.rs  n_dice_roll.rs  n_fib.rs  percent_off.rs  squared_array.rs  stupid_even_odd.rs  three_dice_roll.rs  write_n_0s_to_file.rs
src/code/dice/: mod.rs  n_dice_roll.rs  three_n_dice_roll.rs
src/code/fun/: link_cleaner.rs  mod.rs  super_fizz_buzz.rs
src/code/io/: mod.rs  stupid_even_odd.rs  write_n_0s_to_file.rs
src/code/leetcode/: mod.rs  most_frequent_letter.rs
src/code/math/: average.rs  factorial.rs  mod.rs  n_fib.rs
src/code/math/collatz/: collatz.rs  collatz_max_iter.rs  collatz_to_n.rs  mod.rs
src/code/matrices/: matrix_average.rs  matrix_transpose.rs  mod.rs
src/code/misc/: death_clock.rs  is_even_odd.rs  mod.rs  percent_off.rs
src/helper/: gen_matrix.rs  green_to_red_gradient.rs  mod.rs
