[package]
name = "misc"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "6.1.0"
inquire = "0.9.1"
num = "0.4.3"
num-bigint = "0.4.6"
num-format = "0.4.4"
num-traits = "0.2.19"
owo-colors = "4.2.3"
rand = "0.9.0"
rayon = "1.10.0"
terminal_size = "0.4.3"

[profile.release]
opt-level     = 3
debug         = 0
strip         = true
lto           = true
codegen-units = 1
panic         = "unwind"
