[package]
name = "playground"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.50", features = ["derive"] }
crossterm = "0.29.0"
indicatif = "0.18.0"
inquire = "0.9.1"
num-bigint = "0.4.6"
num-format = "0.4.4"
num-traits = "0.2.19"
owo-colors = "4.2.3"
rand = "0.9.0"
ratatui = "0.29.0"
rayon = "1.10.0"
strum = { version = "0.27.2", features = ["strum_macros"] }
strum_macros = "0.27.2"
terminal_size = "0.4.3"

[profile.release]
opt-level     = 3
debug         = 0
strip         = "symbols"
lto           = true
codegen-units = 1
panic         = "unwind"
